src/Language/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Language/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pTypeName -> TypeName                       (0)
	%start_pListTypeName -> ListTypeName               (1)
	%start_pExpr6 -> Expr6                             (2)
	%start_pExpr7 -> Expr7                             (3)
	%start_pExpr5 -> Expr5                             (4)
	%start_pExpr10 -> Expr10                           (5)
	%start_pExpr2 -> Expr2                             (6)
	%start_pExpr9 -> Expr9                             (7)
	%start_pListExpr -> ListExpr                       (8)
	%start_pExpr4 -> Expr4                             (9)
	%start_pExpr3 -> Expr3                             (10)
	%start_pExpr1 -> Expr1                             (11)
	%start_pStmt -> Stmt                               (12)
	%start_pListIdent -> ListIdent                     (13)
	%start_pMatchClause -> MatchClause                 (14)
	%start_pExpr -> Expr                               (15)
	%start_pListMatchClause -> ListMatchClause         (16)
	%start_pExpr8 -> Expr8                             (17)
	Ident -> L_ident                                   (18)
	Integer -> L_integ                                 (19)
	TypeName -> Ident                                  (20)
	TypeName -> Ident '<' ListTypeName '>'             (21)
	ListTypeName ->                                    (22)
	ListTypeName -> TypeName                           (23)
	ListTypeName -> TypeName ',' ListTypeName          (24)
	Expr6 -> Expr6 '+' Expr7                           (25)
	Expr6 -> Expr6 '-' Expr7                           (26)
	Expr6 -> Expr7                                     (27)
	Expr7 -> Expr7 '*' Expr8                           (28)
	Expr7 -> Expr7 '/' Expr8                           (29)
	Expr7 -> 'not' Expr8                               (30)
	Expr7 -> Expr8                                     (31)
	Expr5 -> Expr5 '==' Expr6                          (32)
	Expr5 -> Expr5 '!=' Expr6                          (33)
	Expr5 -> Expr5 '<' Expr6                           (34)
	Expr5 -> Expr5 '>' Expr6                           (35)
	Expr5 -> Expr5 '<=' Expr6                          (36)
	Expr5 -> Expr5 '>=' Expr6                          (37)
	Expr5 -> 'nil'                                     (38)
	Expr5 -> Expr6                                     (39)
	Expr10 -> Integer                                  (40)
	Expr10 -> 'true'                                   (41)
	Expr10 -> 'false'                                  (42)
	Expr10 -> Ident                                    (43)
	Expr10 -> '(' Expr ')'                             (44)
	Expr2 -> Expr2 'or' Expr5                          (45)
	Expr2 -> Expr2 'and' Expr5                         (46)
	Expr2 -> Expr3                                     (47)
	Expr9 -> '(' Ident ':' TypeName '->' Expr10 ')'    (48)
	Expr9 -> Expr9 '(' ListExpr ')'                    (49)
	Expr9 -> Expr10                                    (50)
	ListExpr ->                                        (51)
	ListExpr -> Expr                                   (52)
	ListExpr -> Expr ',' ListExpr                      (53)
	Expr4 -> '[' ListExpr ']'                          (54)
	Expr4 -> Expr4 '::' Expr5                          (55)
	Expr4 -> Expr5                                     (56)
	Expr3 -> 'if' Expr3 'then' Expr3 'else' Expr3      (57)
	Expr3 -> Expr4                                     (58)
	Expr1 -> Stmt ';' Expr2                            (59)
	Expr1 -> Expr2                                     (60)
	Stmt -> 'val' Ident '=' Expr                       (61)
	Stmt -> 'fun' Ident '(' ListIdent ')' '{' Expr '}'   (62)
	ListIdent ->                                       (63)
	ListIdent -> Ident                                 (64)
	ListIdent -> Ident ',' ListIdent                   (65)
	MatchClause -> 'as' Expr1 '~>' Expr2               (66)
	Expr -> 'match' Expr1 ListMatchClause              (67)
	Expr -> Expr1                                      (68)
	ListMatchClause ->                                 (69)
	ListMatchClause -> ListMatchClause MatchClause     (70)
	Expr8 -> Expr9                                     (71)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	')'            { PT _ (TS _ 3) }
	'*'            { PT _ (TS _ 4) }
	'+'            { PT _ (TS _ 5) }
	','            { PT _ (TS _ 6) }
	'-'            { PT _ (TS _ 7) }
	'->'           { PT _ (TS _ 8) }
	'/'            { PT _ (TS _ 9) }
	':'            { PT _ (TS _ 10) }
	'::'           { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'['            { PT _ (TS _ 19) }
	']'            { PT _ (TS _ 20) }
	'and'          { PT _ (TS _ 21) }
	'as'           { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'fun'          { PT _ (TS _ 25) }
	'if'           { PT _ (TS _ 26) }
	'match'        { PT _ (TS _ 27) }
	'nil'          { PT _ (TS _ 28) }
	'not'          { PT _ (TS _ 29) }
	'or'           { PT _ (TS _ 30) }
	'then'         { PT _ (TS _ 31) }
	'true'         { PT _ (TS _ 32) }
	'val'          { PT _ (TS _ 33) }
	'{'            { PT _ (TS _ 34) }
	'}'            { PT _ (TS _ 35) }
	'~>'           { PT _ (TS _ 36) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pTypeName rule  0
	%start_pListTypeName rule  1
	%start_pExpr6   rule  2
	%start_pExpr7   rule  3
	%start_pExpr5   rule  4
	%start_pExpr10  rule  5
	%start_pExpr2   rule  6
	%start_pExpr9   rule  7
	%start_pListExpr rule  8
	%start_pExpr4   rule  9
	%start_pExpr3   rule  10
	%start_pExpr1   rule  11
	%start_pStmt    rule  12
	%start_pListIdent rule  13
	%start_pMatchClause rule  14
	%start_pExpr    rule  15
	%start_pListMatchClause rule  16
	%start_pExpr8   rule  17
	Ident           rule  18
	Integer         rule  19
	TypeName        rules 20, 21
	ListTypeName    rules 22, 23, 24
	Expr6           rules 25, 26, 27
	Expr7           rules 28, 29, 30, 31
	Expr5           rules 32, 33, 34, 35, 36, 37, 38, 39
	Expr10          rules 40, 41, 42, 43, 44
	Expr2           rules 45, 46, 47
	Expr9           rules 48, 49, 50
	ListExpr        rules 51, 52, 53
	Expr4           rules 54, 55, 56
	Expr3           rules 57, 58
	Expr1           rules 59, 60
	Stmt            rules 61, 62
	ListIdent       rules 63, 64, 65
	MatchClause     rule  66
	Expr            rules 67, 68
	ListMatchClause rules 69, 70
	Expr8           rule  71

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	L_ident        shift, and enter state 19

	Ident          goto state 64
	TypeName       goto state 67

State 1


	L_ident        shift, and enter state 19
	%eof           reduce using rule 22

	Ident          goto state 64
	TypeName       goto state 65
	ListTypeName   goto state 66

State 2


	'('            shift, and enter state 25
	'false'        shift, and enter state 26
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 63
	Expr7          goto state 31
	Expr10         goto state 22
	Expr9          goto state 23
	Expr8          goto state 39

State 3


	'('            shift, and enter state 25
	'false'        shift, and enter state 26
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr7          goto state 62
	Expr10         goto state 22
	Expr9          goto state 23
	Expr8          goto state 39

State 4


	'('            shift, and enter state 25
	'false'        shift, and enter state 26
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 61
	Expr10         goto state 22
	Expr9          goto state 23
	Expr8          goto state 39

State 5


	'('            shift, and enter state 60
	'false'        shift, and enter state 26
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr10         goto state 59

State 6


	'('            shift, and enter state 25
	'['            shift, and enter state 40
	'false'        shift, and enter state 26
	'if'           shift, and enter state 42
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr2          goto state 58
	Expr9          goto state 23
	Expr4          goto state 34
	Expr3          goto state 35
	Expr8          goto state 39

State 7


	'('            shift, and enter state 25
	'false'        shift, and enter state 26
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr10         goto state 22
	Expr9          goto state 57

State 8


	'('            shift, and enter state 25
	'['            shift, and enter state 40
	'false'        shift, and enter state 26
	'fun'          shift, and enter state 41
	'if'           shift, and enter state 42
	'match'        shift, and enter state 43
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	'val'          shift, and enter state 46
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28
	%eof           reduce using rule 51

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr2          goto state 33
	Expr9          goto state 23
	ListExpr       goto state 55
	Expr4          goto state 34
	Expr3          goto state 35
	Expr1          goto state 36
	Stmt           goto state 37
	Expr           goto state 56
	Expr8          goto state 39

State 9


	'('            shift, and enter state 25
	'['            shift, and enter state 40
	'false'        shift, and enter state 26
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr9          goto state 23
	Expr4          goto state 54
	Expr8          goto state 39

State 10


	'('            shift, and enter state 25
	'['            shift, and enter state 40
	'false'        shift, and enter state 26
	'if'           shift, and enter state 42
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr9          goto state 23
	Expr4          goto state 34
	Expr3          goto state 53
	Expr8          goto state 39

State 11


	'('            shift, and enter state 25
	'['            shift, and enter state 40
	'false'        shift, and enter state 26
	'fun'          shift, and enter state 41
	'if'           shift, and enter state 42
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	'val'          shift, and enter state 46
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr2          goto state 33
	Expr9          goto state 23
	Expr4          goto state 34
	Expr3          goto state 35
	Expr1          goto state 52
	Stmt           goto state 37
	Expr8          goto state 39

State 12


	'fun'          shift, and enter state 41
	'val'          shift, and enter state 46

	Stmt           goto state 51

State 13


	L_ident        shift, and enter state 19
	%eof           reduce using rule 63

	Ident          goto state 49
	ListIdent      goto state 50

State 14


	'as'           shift, and enter state 48

	MatchClause    goto state 47

State 15


	'('            shift, and enter state 25
	'['            shift, and enter state 40
	'false'        shift, and enter state 26
	'fun'          shift, and enter state 41
	'if'           shift, and enter state 42
	'match'        shift, and enter state 43
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	'val'          shift, and enter state 46
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr2          goto state 33
	Expr9          goto state 23
	Expr4          goto state 34
	Expr3          goto state 35
	Expr1          goto state 36
	Stmt           goto state 37
	Expr           goto state 38
	Expr8          goto state 39

State 16


	'as'           reduce using rule 69
	%eof           reduce using rule 69

	ListMatchClausegoto state 29

State 17


	'('            shift, and enter state 25
	'false'        shift, and enter state 26
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr10         goto state 22
	Expr9          goto state 23
	Expr8          goto state 24

State 18


	L_ident        shift, and enter state 19


State 19

	Ident -> L_ident .                                  (rule 18)

	'!='           reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	'*'            reduce using rule 18
	'+'            reduce using rule 18
	','            reduce using rule 18
	'-'            reduce using rule 18
	'->'           reduce using rule 18
	'/'            reduce using rule 18
	':'            reduce using rule 18
	'::'           reduce using rule 18
	';'            reduce using rule 18
	'<'            reduce using rule 18
	'<='           reduce using rule 18
	'='            reduce using rule 18
	'=='           reduce using rule 18
	'>'            reduce using rule 18
	'>='           reduce using rule 18
	']'            reduce using rule 18
	'and'          reduce using rule 18
	'as'           reduce using rule 18
	'else'         reduce using rule 18
	'or'           reduce using rule 18
	'then'         reduce using rule 18
	'}'            reduce using rule 18
	'~>'           reduce using rule 18
	%eof           reduce using rule 18


State 20

	Expr10 -> Ident .                                   (rule 43)

	'!='           reduce using rule 43
	'('            reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	'::'           reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	']'            reduce using rule 43
	'and'          reduce using rule 43
	'as'           reduce using rule 43
	'else'         reduce using rule 43
	'or'           reduce using rule 43
	'then'         reduce using rule 43
	'}'            reduce using rule 43
	'~>'           reduce using rule 43
	%eof           reduce using rule 43


State 21

	Expr10 -> Integer .                                 (rule 40)

	'!='           reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	'::'           reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	']'            reduce using rule 40
	'and'          reduce using rule 40
	'as'           reduce using rule 40
	'else'         reduce using rule 40
	'or'           reduce using rule 40
	'then'         reduce using rule 40
	'}'            reduce using rule 40
	'~>'           reduce using rule 40
	%eof           reduce using rule 40


State 22

	Expr9 -> Expr10 .                                   (rule 50)

	'!='           reduce using rule 50
	'('            reduce using rule 50
	')'            reduce using rule 50
	'*'            reduce using rule 50
	'+'            reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'/'            reduce using rule 50
	'::'           reduce using rule 50
	';'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	']'            reduce using rule 50
	'and'          reduce using rule 50
	'as'           reduce using rule 50
	'else'         reduce using rule 50
	'or'           reduce using rule 50
	'then'         reduce using rule 50
	'}'            reduce using rule 50
	'~>'           reduce using rule 50
	%eof           reduce using rule 50


State 23

	Expr9 -> Expr9 . '(' ListExpr ')'                   (rule 49)
	Expr8 -> Expr9 .                                    (rule 71)

	'!='           reduce using rule 71
	'('            shift, and enter state 83
	')'            reduce using rule 71
	'*'            reduce using rule 71
	'+'            reduce using rule 71
	','            reduce using rule 71
	'-'            reduce using rule 71
	'/'            reduce using rule 71
	'::'           reduce using rule 71
	';'            reduce using rule 71
	'<'            reduce using rule 71
	'<='           reduce using rule 71
	'=='           reduce using rule 71
	'>'            reduce using rule 71
	'>='           reduce using rule 71
	']'            reduce using rule 71
	'and'          reduce using rule 71
	'as'           reduce using rule 71
	'else'         reduce using rule 71
	'or'           reduce using rule 71
	'then'         reduce using rule 71
	'}'            reduce using rule 71
	'~>'           reduce using rule 71
	%eof           reduce using rule 71


State 24

	%start_pExpr8 -> Expr8 .                            (rule 17)

	%eof           accept


State 25

	Expr10 -> '(' . Expr ')'                            (rule 44)
	Expr9 -> '(' . Ident ':' TypeName '->' Expr10 ')'    (rule 48)

	'('            shift, and enter state 25
	'['            shift, and enter state 40
	'false'        shift, and enter state 26
	'fun'          shift, and enter state 41
	'if'           shift, and enter state 42
	'match'        shift, and enter state 43
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	'val'          shift, and enter state 46
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 96
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr2          goto state 33
	Expr9          goto state 23
	Expr4          goto state 34
	Expr3          goto state 35
	Expr1          goto state 36
	Stmt           goto state 37
	Expr           goto state 80
	Expr8          goto state 39

State 26

	Expr10 -> 'false' .                                 (rule 42)

	'!='           reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	'::'           reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	']'            reduce using rule 42
	'and'          reduce using rule 42
	'as'           reduce using rule 42
	'else'         reduce using rule 42
	'or'           reduce using rule 42
	'then'         reduce using rule 42
	'}'            reduce using rule 42
	'~>'           reduce using rule 42
	%eof           reduce using rule 42


State 27

	Expr10 -> 'true' .                                  (rule 41)

	'!='           reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	'::'           reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	']'            reduce using rule 41
	'and'          reduce using rule 41
	'as'           reduce using rule 41
	'else'         reduce using rule 41
	'or'           reduce using rule 41
	'then'         reduce using rule 41
	'}'            reduce using rule 41
	'~>'           reduce using rule 41
	%eof           reduce using rule 41


State 28

	Integer -> L_integ .                                (rule 19)

	'!='           reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	'*'            reduce using rule 19
	'+'            reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'/'            reduce using rule 19
	'::'           reduce using rule 19
	';'            reduce using rule 19
	'<'            reduce using rule 19
	'<='           reduce using rule 19
	'=='           reduce using rule 19
	'>'            reduce using rule 19
	'>='           reduce using rule 19
	']'            reduce using rule 19
	'and'          reduce using rule 19
	'as'           reduce using rule 19
	'else'         reduce using rule 19
	'or'           reduce using rule 19
	'then'         reduce using rule 19
	'}'            reduce using rule 19
	'~>'           reduce using rule 19
	%eof           reduce using rule 19


State 29

	%start_pListMatchClause -> ListMatchClause .        (rule 16)
	ListMatchClause -> ListMatchClause . MatchClause    (rule 70)

	'as'           shift, and enter state 48
	%eof           accept

	MatchClause    goto state 95

State 30

	Expr6 -> Expr6 . '+' Expr7                          (rule 25)
	Expr6 -> Expr6 . '-' Expr7                          (rule 26)
	Expr5 -> Expr6 .                                    (rule 39)

	'!='           reduce using rule 39
	')'            reduce using rule 39
	'+'            shift, and enter state 70
	','            reduce using rule 39
	'-'            shift, and enter state 71
	'::'           reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	']'            reduce using rule 39
	'and'          reduce using rule 39
	'as'           reduce using rule 39
	'else'         reduce using rule 39
	'or'           reduce using rule 39
	'then'         reduce using rule 39
	'}'            reduce using rule 39
	'~>'           reduce using rule 39
	%eof           reduce using rule 39


State 31

	Expr6 -> Expr7 .                                    (rule 27)
	Expr7 -> Expr7 . '*' Expr8                          (rule 28)
	Expr7 -> Expr7 . '/' Expr8                          (rule 29)

	'!='           reduce using rule 27
	')'            reduce using rule 27
	'*'            shift, and enter state 72
	'+'            reduce using rule 27
	','            reduce using rule 27
	'-'            reduce using rule 27
	'/'            shift, and enter state 73
	'::'           reduce using rule 27
	';'            reduce using rule 27
	'<'            reduce using rule 27
	'<='           reduce using rule 27
	'=='           reduce using rule 27
	'>'            reduce using rule 27
	'>='           reduce using rule 27
	']'            reduce using rule 27
	'and'          reduce using rule 27
	'as'           reduce using rule 27
	'else'         reduce using rule 27
	'or'           reduce using rule 27
	'then'         reduce using rule 27
	'}'            reduce using rule 27
	'~>'           reduce using rule 27
	%eof           reduce using rule 27


State 32

	Expr5 -> Expr5 . '==' Expr6                         (rule 32)
	Expr5 -> Expr5 . '!=' Expr6                         (rule 33)
	Expr5 -> Expr5 . '<' Expr6                          (rule 34)
	Expr5 -> Expr5 . '>' Expr6                          (rule 35)
	Expr5 -> Expr5 . '<=' Expr6                         (rule 36)
	Expr5 -> Expr5 . '>=' Expr6                         (rule 37)
	Expr4 -> Expr5 .                                    (rule 56)

	'!='           shift, and enter state 74
	')'            reduce using rule 56
	','            reduce using rule 56
	'::'           reduce using rule 56
	';'            reduce using rule 56
	'<'            shift, and enter state 75
	'<='           shift, and enter state 76
	'=='           shift, and enter state 77
	'>'            shift, and enter state 78
	'>='           shift, and enter state 79
	']'            reduce using rule 56
	'and'          reduce using rule 56
	'as'           reduce using rule 56
	'else'         reduce using rule 56
	'or'           reduce using rule 56
	'then'         reduce using rule 56
	'}'            reduce using rule 56
	'~>'           reduce using rule 56
	%eof           reduce using rule 56


State 33

	Expr2 -> Expr2 . 'or' Expr5                         (rule 45)
	Expr2 -> Expr2 . 'and' Expr5                        (rule 46)
	Expr1 -> Expr2 .                                    (rule 60)

	')'            reduce using rule 60
	','            reduce using rule 60
	';'            reduce using rule 60
	']'            reduce using rule 60
	'and'          shift, and enter state 81
	'as'           reduce using rule 60
	'or'           shift, and enter state 82
	'}'            reduce using rule 60
	'~>'           reduce using rule 60
	%eof           reduce using rule 60


State 34

	Expr4 -> Expr4 . '::' Expr5                         (rule 55)
	Expr3 -> Expr4 .                                    (rule 58)

	')'            reduce using rule 58
	','            reduce using rule 58
	'::'           shift, and enter state 85
	';'            reduce using rule 58
	']'            reduce using rule 58
	'and'          reduce using rule 58
	'as'           reduce using rule 58
	'else'         reduce using rule 58
	'or'           reduce using rule 58
	'then'         reduce using rule 58
	'}'            reduce using rule 58
	'~>'           reduce using rule 58
	%eof           reduce using rule 58


State 35

	Expr2 -> Expr3 .                                    (rule 47)

	')'            reduce using rule 47
	','            reduce using rule 47
	';'            reduce using rule 47
	']'            reduce using rule 47
	'and'          reduce using rule 47
	'as'           reduce using rule 47
	'or'           reduce using rule 47
	'}'            reduce using rule 47
	'~>'           reduce using rule 47
	%eof           reduce using rule 47


State 36

	Expr -> Expr1 .                                     (rule 68)

	')'            reduce using rule 68
	','            reduce using rule 68
	';'            reduce using rule 68
	']'            reduce using rule 68
	'}'            reduce using rule 68
	%eof           reduce using rule 68


State 37

	Expr1 -> Stmt . ';' Expr2                           (rule 59)

	';'            shift, and enter state 94


State 38

	%start_pExpr -> Expr .                              (rule 15)

	%eof           accept


State 39

	Expr7 -> Expr8 .                                    (rule 31)

	'!='           reduce using rule 31
	')'            reduce using rule 31
	'*'            reduce using rule 31
	'+'            reduce using rule 31
	','            reduce using rule 31
	'-'            reduce using rule 31
	'/'            reduce using rule 31
	'::'           reduce using rule 31
	';'            reduce using rule 31
	'<'            reduce using rule 31
	'<='           reduce using rule 31
	'=='           reduce using rule 31
	'>'            reduce using rule 31
	'>='           reduce using rule 31
	']'            reduce using rule 31
	'and'          reduce using rule 31
	'as'           reduce using rule 31
	'else'         reduce using rule 31
	'or'           reduce using rule 31
	'then'         reduce using rule 31
	'}'            reduce using rule 31
	'~>'           reduce using rule 31
	%eof           reduce using rule 31


State 40

	Expr4 -> '[' . ListExpr ']'                         (rule 54)

	'('            shift, and enter state 25
	'['            shift, and enter state 40
	']'            reduce using rule 51
	'false'        shift, and enter state 26
	'fun'          shift, and enter state 41
	'if'           shift, and enter state 42
	'match'        shift, and enter state 43
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	'val'          shift, and enter state 46
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr2          goto state 33
	Expr9          goto state 23
	ListExpr       goto state 93
	Expr4          goto state 34
	Expr3          goto state 35
	Expr1          goto state 36
	Stmt           goto state 37
	Expr           goto state 56
	Expr8          goto state 39

State 41

	Stmt -> 'fun' . Ident '(' ListIdent ')' '{' Expr '}'    (rule 62)

	L_ident        shift, and enter state 19

	Ident          goto state 92

State 42

	Expr3 -> 'if' . Expr3 'then' Expr3 'else' Expr3     (rule 57)

	'('            shift, and enter state 25
	'['            shift, and enter state 40
	'false'        shift, and enter state 26
	'if'           shift, and enter state 42
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr9          goto state 23
	Expr4          goto state 34
	Expr3          goto state 91
	Expr8          goto state 39

State 43

	Expr -> 'match' . Expr1 ListMatchClause             (rule 67)

	'('            shift, and enter state 25
	'['            shift, and enter state 40
	'false'        shift, and enter state 26
	'fun'          shift, and enter state 41
	'if'           shift, and enter state 42
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	'val'          shift, and enter state 46
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr2          goto state 33
	Expr9          goto state 23
	Expr4          goto state 34
	Expr3          goto state 35
	Expr1          goto state 90
	Stmt           goto state 37
	Expr8          goto state 39

State 44

	Expr5 -> 'nil' .                                    (rule 38)

	'!='           reduce using rule 38
	')'            reduce using rule 38
	','            reduce using rule 38
	'::'           reduce using rule 38
	';'            reduce using rule 38
	'<'            reduce using rule 38
	'<='           reduce using rule 38
	'=='           reduce using rule 38
	'>'            reduce using rule 38
	'>='           reduce using rule 38
	']'            reduce using rule 38
	'and'          reduce using rule 38
	'as'           reduce using rule 38
	'else'         reduce using rule 38
	'or'           reduce using rule 38
	'then'         reduce using rule 38
	'}'            reduce using rule 38
	'~>'           reduce using rule 38
	%eof           reduce using rule 38


State 45

	Expr7 -> 'not' . Expr8                              (rule 30)

	'('            shift, and enter state 25
	'false'        shift, and enter state 26
	'true'         shift, and enter state 27
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr10         goto state 22
	Expr9          goto state 23
	Expr8          goto state 89

State 46

	Stmt -> 'val' . Ident '=' Expr                      (rule 61)

	L_ident        shift, and enter state 19

	Ident          goto state 88

State 47

	%start_pMatchClause -> MatchClause .                (rule 14)

	%eof           accept


State 48

	MatchClause -> 'as' . Expr1 '~>' Expr2              (rule 66)

	'('            shift, and enter state 25
	'['            shift, and enter state 40
	'false'        shift, and enter state 26
	'fun'          shift, and enter state 41
	'if'           shift, and enter state 42
	'nil'          shift, and enter state 44
	'not'          shift, and enter state 45
	'true'         shift, and enter state 27
	'val'          shift, and enter state 46
	L_ident        shift, and enter state 19
	L_integ        shift, and enter state 28

	Ident          goto state 20
	Integer        goto state 21
	Expr6          goto state 30
	Expr7          goto state 31
	Expr5          goto state 32
	Expr10         goto state 22
	Expr2          goto state 33
	Expr9          goto state 23
	Expr4          goto state 34
	Expr3          goto state 35
	Expr1          goto state 87
	Stmt           goto state 37
	Expr8          goto state 39

State 49

	ListIdent -> Ident .                                (rule 64)
	ListIdent -> Ident . ',' ListIdent                  (rule 65)

	')'            reduce using rule 64
	','            shift, and enter state 86
	%eof           reduce using rule 64


State 50

	%start_pListIdent -> ListIdent .                    (rule 13)

	%eof           accept


State 51

	%start_pStmt -> Stmt .                              (rule 12)

	%eof           accept


State 52

	%start_pExpr1 -> Expr1 .                            (rule 11)

	%eof           accept


State 53

	%start_pExpr3 -> Expr3 .                            (rule 10)

	%eof           accept


State 54

	%start_pExpr4 -> Expr4 .                            (rule 9)
	Expr4 -> Expr4 . '::' Expr5                         (rule 55)

	'::'           shift, and enter state 85
	%eof           accept


State 55

	%start_pListExpr -> ListExpr .                      (rule 8)

	%eof           accept


State 56

	ListExpr -> Expr .                                  (rule 52)
	ListExpr -> Expr . ',' ListExpr                     (rule 53)
